# picolibc

./: CMakeLists.txt  meson.build  picolibc.ld.in  picolibc.specs.in  picolibc_perf.ld.in
cmake/: TC-ccac-rmx100.cmake  TC-ccac.cmake
libc/include/: stdio.h
libc/machine/riscv/: memcpy.c
libc/stdio/: fputc.c  stdio_private.h  vfprintf.c  vfprintf_int.c  vfprintf_n.c
libm/complex/: casin.c  casinf.c  casinh.c  casinhf.c  casinhl.c  casinl.c  catan.c  catanf.c  catanl.c  clog.c  clogl.c
libm/test/: meson.build
newlib/libc/ctype/: iswalnum.c  iswdigit_l.c
newlib/libc/errno/: errno.c
newlib/libc/picolib/: picosbrk.c
newlib/libc/tinystdio/: bufio.c  conv_flt.c  gets.c  mktemp.c  stdio.h  stdio_private.h  vfprintf.c  vfprintf_int.c  vfprintf_n.c  vfscanf.c
newlib/libc/uchar/: mbrtoc16.c
newlib/libm/common/: CMakeLists.txt
newlib/libm/complex/: casin.c  casinf.c  casinh.c  casinhf.c  casinhl.c  casinl.c  catan.c  catanf.c  catanl.c  clog.c  clogl.c
newlib/testsuite/newlib.string/: meson.build
picocrt/: crt0.h  meson.build
picocrt/machine/aarch64/: crt0.S  crt0.c
picocrt/machine/arc/: crt0.c
picocrt/machine/arc64/: CMakeLists.txt  crt0.c
picocrt/machine/arm/: crt0.c
picocrt/machine/hexagon/: crt0.S  crt0.c
picocrt/machine/loongarch/: crt0.c
picocrt/machine/m68k/: crt0.c
picocrt/machine/riscv/: CMakeLists.txt  arcv.h  crt0.c
picocrt/machine/rx/: CMakeLists.txt  crt0.c
picocrt/machine/sh/: CMakeLists.txt
picocrt/machine/x86/: CMakeLists.txt  traps.S  traps.c
scripts/: cross-arc-snps-elf.txt  cross-arc32-snps-elf.txt  cross-arc64-snps-elf.txt  run-arc  run-riscv  run-riscv-nsim
semihost/: meson.build  read.c
semihost/common/: mapstdio.c  open.c  read.c
semihost/machine/arc/: arc_getentropy.c  (+4 more)
test/: meson.build
test/libc-testsuite/: meson.build
test/riscv/: meson.build  riscv-fpu-mstatus.c  riscv-vector-mstatus.c  riscv.h
test/semihost/: meson.build
test/test-ctype/: meson.build
test/test-iconv/: meson.build
test/test-math/: meson.build
test/test-monetary/: meson.build
test/test-stdio/: meson.build  test-fputc.c
test/test-string/: meson.build
(+16 files in other folders)
